# pfm-nsi

./: .gitignore  BETA.md  CITATION.cff  LICENSE  README.md  example_use.py  pyproject.toml
docs/: TUTORIAL.md  USER_GUIDE.md
matlab/: README.md
matlab/examples/: ExampleUse.m  example_use.m
matlab/models/: nsi_usability_model.mat
matlab/scripts/: conditional_reliability_from_nsi.m  export_nsi_reliability_model_for_python.m  local_predict_binom_logit.m  pfm_nsi.m  pfm_nsi_core.m  pfm_nsi_plots.m  pfm_qc.m  pfm_qc_plots.m  save_matlab_conditional_output.m  save_matlab_nsi_output.m  save_matlab_qc_output.m  save_matlab_usability_output.m
pfm_nsi/: __init__.py  cli.py  core.py  mesh.py  plots.py  reliability.py
pfm_nsi/models/: cifti_surf_neighbors_lr_normalwall.npz
pfm_nsi/models/mesh/: fslr32k_cortex_masks.mat  fslr32k_cortex_masks.npz
tests/: test_cli_consistency.py
tools/: export_neighbors_for_python.py  export_priors_for_python.py
