[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfm-nsi"
version = "0.1.0"
description = "Precision Functional Mapping - Network Similarity Index (PFM-NSI)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Charles Lynch"}
]
keywords = ["neuroimaging", "fMRI", "cifti", "PFM", "NSI"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy",
  "scipy",
  "nibabel",
]

[project.optional-dependencies]
plots = ["matplotlib"]

[project.scripts]
pfm-nsi = "pfm_nsi.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pfm_nsi"]

[tool.setuptools.package-data]
pfm_nsi = [
  "models/*.npz",
  "models/*.json",
  "models/*.json.gz",
]
